[package]
name = "bevy_vulkan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
# [profile.dev.package."*"]
# opt-level = 3

[dependencies]
ash = { version = "0.37.3", features = ["linked"] }
ash-window = "0.12.0"
bevy = { version = "0.12.1", features = [] }
crossbeam = "0.8.4"
log = "0.4.20"
shaderc = "0.8.3"
thiserror = "1.0.57"

