[package]
name = "bevy_vulkan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
# [profile.dev.package."*"]
# opt-level = 3

[dependencies]
ash = { path = "../ash/ash", features = ["linked"] }
ash-window = { path = "../ash/ash-window/" }
bevy = { version = "0.13.0", features = ["file_watcher", "hdr"] }
bytemuck = "1.14.3"
crossbeam = "0.8.4"
gltf = "1.4.0"
gpu-allocator = { path = "../gpu-allocator" }
log = "0.4.20"
rand = "0.8.5"
raw-window-handle = "0.6.0"
shaderc = "0.8.3"
thiserror = "1.0.57"

