[package]
name = "bevy_vulkan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
ash = { version = "0.38.0", features = ["linked"] }
ash-window = "0.13.0"
bevy = { version = "0.16.0", features = ["file_watcher", "hdr"] }
bevy_rapier3d = "0.27.0"
bytemuck = "1.14.3"
crossbeam = "0.8.4"
egui = "0.29.1"
egui-ash-renderer = {version = "0.6.0", features = ["dynamic-rendering", "gpu-allocator"] }
egui-winit = "0.29.1"
glam = { version= "0.29.2" }
gltf = "1.4.1"
gpu-allocator = "0.27.0"
#gpu-allocator = { git = "https://github.com/Traverse-Research/gpu-allocator.git", branch = "main" }
half = "2.4.1"
log = "0.4.20"
png = "0.17.14"
rand = "0.8.5"
rand_chacha = "0.3.1"
raw-window-handle = "0.6.2"
rayon = "1.10.0"
shaderc = "0.8.3"
thiserror = "1.0.57"
winit = "0.30.5"

